--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -70,10 +70,10 @@ jobs:
             fi
           done < dz2.txt
 
-      - name: 🚀 Run latency test and filter nodes
+      - name: 🚀 Run latency test and sort nodes
         run: python3 clash_latency.py
 
-      - name: 🏷️ Rename nodes with city info
+      - name: 🏷️ Rename nodes with city and latency
         run: python3 merge_nodes.py
 
       - name: 🧾 Set Git identity
@@ -84,5 +84,5 @@ jobs:
       - name: 📤 Commit and push results
         run: |
           git add v2.txt
-          git commit -m "Auto-sync with clash-style latency test and renaming"
+          git commit -m "Auto-sync with sorted latency and renamed nodes"
           git push
