--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 🧰 Set up Python and dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests pyyaml
+          pip install requests pyyaml aiohttp
 
       - name: 🧹 Clear v2.txt
         run: echo -n > v2.txt
@@ -84,5 +84,5 @@ jobs:
       - name: 📤 Commit and push results
         run: |
           git add v2.txt
-          git commit -m "Auto-sync with sorted latency and renamed nodes"
+          git commit -m "Auto-sync with updated latency and city info"
           git push
