--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -16,73 +16,31 @@ jobs:
       - name: 🧰 Set up Python and dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests pyyaml aiohttp
+          pip install requests aiohttp
 
-      - name: 🧹 Clear v2.txt
-        run: echo -n > v2.txt
-
-      - name: 📦 Merge wd.md
+      - name: 📦 Download Clash.Meta
         run: |
-          cat wd.md >> v2.txt
-          echo -e "\n" >> v2.txt
+          curl -L -o clash.tar.gz https://github.com/MetaCubeX/Clash.Meta/releases/latest/download/clash.meta-linux-amd64.tar.gz
+          tar -xzf clash.tar.gz
+          chmod +x clash.meta
 
-      - name: 🔗 Merge dz1.txt links
+      - name: ⚙️ Start Clash in background
         run: |
-          while IFS= read -r url; do
-            [[ -z "$url" || "$url" =~ ^# ]] && continue
-            raw_url="$url"
-            if [[ "$url" == https://github.com/* ]]; then
-              raw_url=$(echo "$url" | sed -E 's#https://github.com/([^/]+)/([^/]+)/blob/(.+)#https://raw.githubusercontent.com/\1/\2/\3#')
-            fi
-            echo "Fetching: $raw_url"
-            content=$(curl -fsSL "$raw_url")
-            if echo "$content" | grep -qE '^[A-Za-z0-9+/=]+$'; then
-              echo "$content" | base64 -d >> v2.txt || echo "# ⚠️ 解码失败: $raw_url" >> v2.txt
-            else
-              echo "$content" >> v2.txt
-            fi
-            echo -e "\n" >> v2.txt
-          done < dz1.txt
+          mkdir -p clash_config
+          cp config.yaml clash_config/config.yaml
+          nohup ./clash.meta -d clash_config > clash.log 2>&1 &
+          sleep 5  # 等待 Clash 启动
 
-      - name: 🧬 Merge dz2.txt GitHub repos
-        run: |
-          while IFS= read -r repo_url; do
-            [[ -z "$repo_url" || "$repo_url" =~ ^# ]] && continue
-            echo "🔍 扫描仓库: $repo_url"
-            if [[ "$repo_url" =~ github.com/([^/]+)/([^/]+) ]]; then
-              user="${BASH_REMATCH[1]}"
-              repo="${BASH_REMATCH[2]}"
-              branch=$(curl -s https://api.github.com/repos/$user/$repo | jq -r .default_branch)
-              commit_sha=$(curl -s https://api.github.com/repos/$user/$repo/commits/$branch | jq -r .sha)
-              files=$(curl -s https://api.github.com/repos/$user/$repo/commits/$commit_sha | jq -r '.files[] | select(.filename | endswith(".txt")) | .filename')
-              for file in $files; do
-                raw_url="https://raw.githubusercontent.com/$user/$repo/$branch/$file"
-                echo "📄 获取文件: $raw_url"
-                content=$(curl -fsSL "$raw_url")
-                if echo "$content" | grep -qE '^[A-Za-z0-9+/=]+$'; then
-                  echo "$content" | base64 -d >> v2.txt || echo "# ⚠️ 解码失败: $raw_url" >> v2.txt
-                else
-                  echo "$content" >> v2.txt
-                fi
-                echo -e "\n" >> v2.txt
-                break
-              done
-            fi
-          done < dz2.txt
-
-      - name: 🚀 Run latency test and sort nodes
-        run: python3 clash_latency.py
-
-      - name: 🏷️ Rename nodes with city and latency
-        run: python3 merge_nodes.py
+      - name: 🧪 Test Google via proxy
+        run: python3 proxy_google_test.py
 
       - name: 🧾 Set Git identity
         run: |
           git config --global user.name "${{ github.repository_owner }}"
           git config --global user.email "${{ github.repository_owner }}@users.noreply.github.com"
 
-      - name: 📤 Commit and push results
+      - name: 📤 Commit proxy test result
         run: |
-          git add v2.txt
-          git commit -m "Auto-sync with updated latency and city info"
+          git add proxy_result.json
+          git commit -m "Update proxy Google latency result"
           git push
