--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -1,47 +1,44 @@
-name: sync-v2
+name: Sync V2
 
 on:
-  schedule:
-    - cron: '0 */6 * * *'
   workflow_dispatch:
+  schedule:
+    - cron: '0 2 * * *'  # 每天凌晨2点执行
 
 jobs:
-  sync:
+  sync-v2:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 📥 Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: 🧰 Set up Python and dependencies
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install requests pyyaml ipaddress
+
+      - name: Step 1 - Merge proxies to v2.txt
+        run: python py/step1_merge_proxies.py
+
+      - name: Step 2 - Convert v2.txt to Clash config.yaml
+        run: python py/step2_convert_to_clash.py
+
+      - name: Step 3 - Test nodes and update config.yaml
+        run: sudo apt install -y curl && python py/step3_test_nodes.py
+
+      - name: Step 4 - Convert config.yaml to v2ray format
+        run: python py/step4_convert_to_v2ray.py
+
+      - name: Step 5 - Add city names to v2.txt
+        run: python py/step5_add_city_names.py
+
+      - name: Commit changes
         run: |
-          python -m pip install --upgrade pip
-          pip install requests pyyaml aiohttp
-
-      - name: 📦 Download Clash.Meta
-        run: |
-          curl -L -o clash.tar.gz https://github.com/MetaCubeX/Clash.Meta/releases/latest/download/clash.meta-linux-amd64.tar.gz
-          tar -xzf clash.tar.gz
-          chmod +x clash.meta
-
-      - name: 🧬 Generate config.yaml from v2.txt
-        run: python3 generate_config.py
-
-      - name: ⚙️ Start Clash in background
-        run: |
-          nohup ./clash.meta -d . > clash.log 2>&1 &
-          sleep 5
-
-      - name: 🧪 Run multi-node Google latency test
-        run: python3 proxy_google_rank.py
-
-      - name: 🧾 Set Git identity
-        run: |
-          git config --global user.name "${{ github.repository_owner }}"
-          git config --global user.email "${{ github.repository_owner }}@users.noreply.github.com"
-
-      - name: 📤 Commit latency ranking
-        run: |
-          git add proxy_rank.json proxy_rank.md
-          git commit -m "Update multi-node Google latency ranking"
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add v2.txt config.yaml
+          git commit -m "Update v2.txt and config.yaml"
           git push
