--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Step 2 - Convert v2.txt to Clash config.yaml
         run: python py/step2_convert_to_clash.py
 
-#      - name: Step 3 - Test nodes and update config.yaml
-#        run: sudo apt install -y curl && python py/step3_test_nodes.py
+      - name: Step 3 - Test nodes and update config.yaml
+        run: sudo apt install -y curl && python py/step3_test_nodes.py
 
 #      - name: Step 4 - Convert config.yaml to v2ray format
 #        run: python py/step4_convert_to_v2ray.py
