--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Step 1 - Merge proxies to v2.txt
         run: python py/step1_merge_proxies.py
 
+      - name: Step 2 - Merge proxies to v2.txt
+        run: python py/step2_test_v2_nodes.py
+        
       - name: Commit changes
         run: |
           git config --global user.name "github-actions"
