--- a/.github/workflows/fast.yml
+++ b/.github/workflows/fast.yml
@@ -18,11 +18,6 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          # 不需要额外插件，所以只用标准库
-
       - name: Run update script
         run: python py/fast.py
 
@@ -31,5 +26,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add fast.txt
-          git commit -m "Update fast.txt"
+          git commit -m "Update fast.txt with latest V2Ray nodes" || echo "No changes to commit"
           git push
