--- a/.github/workflows/fast.yml
+++ b/.github/workflows/fast.yml
@@ -18,8 +18,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
       - name: Run update script
-        run: python fast.py
+        run: python py/fast.py
 
       - name: Commit and push changes
         run: |
