--- a/.github/workflows/fast.yml
+++ b/.github/workflows/fast.yml
@@ -33,5 +33,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add fast.txt
-          git commit -m "Update fast.txt with latest V2Ray nodes" || echo "No changes to commit"
+          git commit -m "Update fast.txt with latest decoded nodes" || echo "No changes to commit"
           git push
