--- a/.github/workflows/fast.yml
+++ b/.github/workflows/fast.yml
@@ -2,7 +2,7 @@ name: Update V2Ray Nodes
 
 on:
   schedule:
-    - cron: '0 * * * *'   # 每小时运行一次
+    - cron: '0 */2 * * *'   # 每2小时运行一次
   workflow_dispatch:       # 手动触发
 
 jobs:
